# ResearchAtlas

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  researchatlas_agent_workflow.html  start.sh
api/: routes_chat.py  routes_library.py  routes_qa.py  routes_review.py  routes_search.py
app/: config.py  database.py  main.py  mcp_client.py  observability.py  prompts.py  schemas.py
app/agents/: coauthor_graph.py  ingestion_agent.py  manager.py  memory_agent.py  pre_filter.py  qa_agent.py  ranking_agent.py  retrieval_agent.py  search_agent.py  summary_agent.py
app/graph/: build_graph.py  nodes.py  router.py  state.py
app/mcp_server/: server.py  tools_arxiv.py  tools_memory.py  tools_pdf.py  tools_rag.py
app/qa/: __init__.py  assets.py  evaluation.py  mcp_host.py  mcp_server.py  orchestrator.py  summary_evaluation.py  text_utils.py
app/rag/: chroma_telemetry.py  chunker.py  cleaner.py  embeddings.py  parser.py  retriever.py  vectorstore.py
data/qa_assets/6xz1ditidhlmnw2orxp/: ai-for-social-impact-learning-and-planning-in-the-data-to-deployment-pipeline-pr-2.html  ai-for-social-impact-learning-and-planning-in-the-data-to-deployment-pipeline-pr.html  ai-for-social-impact-learning-and-planning-in-the-data-to-deployment-pipeline-qa.md
data/qa_assets/current_session/: answer.md
data/qa_assets/huiargj9ginmnp3399w/: answer.md
frontend/: app.js  index.html  styles.css  workflow_diagram.html
tests/: test_embeddings_openai.py  test_graph.py  test_mcp_tools.py  test_memory.py  test_qa_mcp.py  test_rag.py  test_summary_competition.py
(+23 files in other folders)
