[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "arxiv-research-assistant"
version = "0.1.0"
description = "AI-powered research assistant with MCP, LangGraph, and multi-agent workflows"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain>=0.3.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
start-api    = "uvicorn app.main:app --reload --port 8000"
start-mcp    = "uvicorn app.mcp_server.server:app --reload --port 8001"
open-frontend = "python -m webbrowser http://localhost:8000"

[tool.pytest.ini_options]
testpaths = ["tests"]
